2008-02-01  Andre Klapper  <a9016009@gmx.de>

	* plugin-manager.c: (org_gnome_plugin_manager_manage):
	fix spelling.

2007-12-04  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #500210

	* plugin-manager.c: Changed coding-style to be more accurate to other
	sources, but the main change was to show configuration options of the
	plugin into extra tab, instead of new popup under 'Configure' button.

2007-11-19  Sankar P  <psankar@novell.com>

	** Fix for bug #498173

	* plugin-manager.c: (eppm_response):
	e_plugin_configure should be called only
	when user clicks on Configure button.

2007-10-26  Kjartan Maraas  <kmaraas@gnome.org>

	* plugin-manager.c: (org_gnome_plugin_manager_manage):
	Don't mix code and declarations.

2007-10-26  Sankar P  <psankar@novell.com>

	* plugin-manager.c: (eppm_selection_changed):
	Ssssshhhhhhhh the compiler warning.

2007-10-26  Sankar P  <psankar@novell.com>

	** Fix for bug #461272

	* plugin-manager.c: (eppm_selection_changed),
	(org_gnome_plugin_manager_manage):
	Configure button should not be enabled for all.
	configure button needs a hot-key.

2007-07-26  Sankar P  <psankar@novell.com>

	* plugin-manager.c: (eppm_response),
	(org_gnome_plugin_manager_manage), (e_plugin_lib_configure):
	Plugins should be configurable within the plugin-manager itself.
	Fixes Preferences dialog bloating.
	See bug #459522

2007-05-11  Sankar P  <psankar@novell.com>

	* Committed on behalf of Gilles Dartiguelongue <dartigug@esiee.fr>

	* plugin-manager.c: (eppm_show_plugin), (eppm_selection_changed),
	(eppm_enable_toggled), (eppm_free),
	(org_gnome_plugin_manager_manage):
	Sort the list of plugins based on name so that it is easy to use

2006-01-25  Rajeev ramanathan  <rajeevramanathan_2004@yahoo.co.in>

	** Fixes Bug #314913
	
	* plugin-manager.c : Removed id, path displayed in UI 

2006-01-16  Kjartan Maraas  <kmaraas@gnome.org>

	* plugin-manager.c: (eppm_enable_toggled): Remove unused var.

2006-01-13  Srinivasa Ragavan  <sragavan@novell.com>
